Add `/books/{id}` resource
Added functionality to get a book by `id`. Separated `ui/templates`
into different go templates to allow for different HTML pages, while
re-using templates like `header.html`. Ran into an issue with
`gorilla/mux` and `mux.Var` not showing the `id` when making a test
request in `internal/api/resources/books_test.go`. Need to investigate
further.

--- a/cmd/ui/templates/index.html
+++ b/cmd/ui/templates/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<head>
-    <title>RESTful Golang</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store" />
-</head>
+{{ template "header" }}
 
 <body class="body">
-    <main>
-        <table>
-					<tr>
-						<th>Title</th>
-						<th>Author</th>
-						<th>Published</th>
-						<th>Genre</th>
-						<th>Read Status</th>
-					</tr>
-          {{ range .Books}}
-					<tr>
-          	<td><a href="/{{.ID}}">{{ .Title}}</a></td>
-						<td>{{ .Author }}</td>
-						<td>{{ .Published }}</td>
-						<td>{{ .Genre }}</td>
-						<td>{{ .ReadStatus }}</td>
-					</tr>
-          {{ end }}
-        </table>
-    </main>
+	<main>
+		<table style="text-align: center">
+			<tr>
+				<th>Title</th>
+				<th>Author</th>
+				<th>Published</th>
+				<th>Genre</th>
+				<th>Read Status</th>
+			</tr>
+			{{ range .Books}}
+			<tr>
+				<td style="text-align: left">
+					<a href="/{{.ID}}">{{ .Title}}</a>
+				</td>
+				<td>{{ .Author }}</td>
+				<td>{{ .Published }}</td>
+				<td>{{ .Genre }}</td>
+				<td>{{ .ReadStatus }}</td>
+			</tr>
+			{{ end }}
+		</table>
+	</main>
 </body>
 
 </html>
