Add `DELETE` functionality
Added the functionality to delete a book. Added `go-chi/cors`. Added a
`TODO` list to `README.md`.

--- a/cmd/ui/templates/index.html
+++ b/cmd/ui/templates/index.html
@@ -22,10 +22,14 @@
 				<td>{{ .Published }}</td>
 				<td>{{ .Genre }}</td>
 				<td>{{ .ReadStatus }}</td>
+				<td>
+					<input type="button" value="delete" onclick="deleteReq('{{.ID}}')" />
+				</td>
 			</tr>
 			{{ end }}
 		</table>
 	</main>
+	<script type="text/javascript" src="/static/js/index.js"></script>
 </body>
 
 </html>
