--- a/cmd/ui/templates/index.html
+++ b/cmd/ui/templates/index.html
@@ -5,6 +5,12 @@
 
 <body class="body">
 	<main>
+		<a href="/create">
+			<button>
+				Create Book
+			</button>
+		</a>
+		<br>
 		<table style="text-align: center">
 			<tr>
 				<th>Title</th>
