Refactor `cmd/ui`
Add dynamic setting of `currentIP` by using environment variables and
making a request to `dockerIP` first and if it fails using `localhost`.
Added `alert` to `catch` statment of fetch call in `index.js` to notify
user if delete fails. Added local `favicon.svg` file and reference it in
`header.html`. Updated tests and added `TestDecodeJSON` to
`cmd/ui/utils_test.go`. Added more entries in `books.csv`. Updated
`docker-compose.yml` service name and container_name `rest-api`. Updated
code-review document.

--- a/cmd/ui/templates/header.html
+++ b/cmd/ui/templates/header.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store" />
-		<link rel="shortcut icon" href="https://golang.org/doc/gopher/favicon.svg" type="image/svg" />
+		<link rel="shortcut icon" href="/static/favicon.svg" type="image/svg" />
 </head>
 {{ end }}
