--- a/cmd/ui/templates/index.html
+++ b/cmd/ui/templates/index.html
@@ -6,9 +6,11 @@
 <body class="body">
 	<main>
 		<a href="/create">
-			<button>
-				Create Book
-			</button>
+			<button>Create Book</button>
+		</a>
+		&nbsp;&nbsp;&nbsp;
+		<a href="/ping">
+			<button>Ping Backend</button>
 		</a>
 		<br>
 		<table style="text-align: center">
